fix image on mobile

--- a/style.css
+++ b/style.css
@@ -184,7 +184,8 @@ section h2 {
 }
 
 #serate img {
-    height: 350px;
+    max-height: 350px;
+    max-width: 100%;
     display: block;
     margin: 0 auto;
 }
